# lcd

./: CMakeLists.txt  lcd.apple-uni  lcd.apple-x86  lcd.linux-arm  lcd.linux-x86  lcd.mac-uni  lcd.mac-x86  main.cpp
Original/: amj_date.hpp  argent.hpp  c  lcd  lcd.cpp  lcd.sql  lcd2024-07-10  lcd_1.1.0.cpp  main_argent.cpp  main_date  main_date.cpp  stringTest  stringTest.cpp
Original/TEST/: getExecPath  getExecPath.cpp  main_argent
my_lib/: amj_date_method.cpp  classLivreComptable.hpp  class_AMJ_Date.hpp  global.h  global_vars.h  lc_ajoute.cpp  lc_const_dest.cpp  lc_initLivre.cpp  lc_nouvellle_trans.cpp  lc_ouvre_ferme.cpp  lc_print_categories.cpp  lc_print_comptes.cpp  lc_print_transactions.cpp  lc_publish.cpp  lc_questions.cpp  lc_set2mem.cpp  lc_sommaire_mois.cpp  lc_supprime.cpp  lc_utils.cpp
